--- a/style/style.css
+++ b/style/style.css
@@ -22,10 +22,10 @@ button {
     border-radius: 6px;
     color: #fff;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 2vw;
-    height: 36px;
+    font-size: 4vw;
+    height: 50px;
     line-height: 20px;
-    min-width: 185px;
+    width: 50%;
     padding: 0 16px 0 16px;
     transition: 0.3s;
     cursor: pointer;
@@ -37,8 +37,24 @@ button:active {
     transform: translateY(4px);
 }
 
+input{
+    width: 30px;
+    height: 30px;
+}
+
 li {
     list-style-type: none;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 2vw;
+    font-size: 5vw;
+}
+
+.list {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 0px;
+}
+
+#list{
+    padding: 0px;
 }
