--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    margin-top: 20%;
 }
 
 button {
